--- a/public/index.html
+++ b/public/index.html
@@ -2,55 +2,75 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SayBon — Easy. Fun. French.</title>
-  <link rel="stylesheet" href="/css/global.css">
-  <link rel="stylesheet" href="/css/home.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>SayBon — Easy Fun French</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/home.css" />
 </head>
+
 <body>
 
-<div class="homepage">
+  <!-- AUDIO -->
+  <audio id="introAudio" preload="auto">
+    <source src="assets/sounds/intro-v2.mp3" type="audio/mpeg">
+  </audio>
 
-  <!-- LEFT SIDE (WHITE) -->
-  <div class="home-left">
+  <div class="app">
 
-    <div class="teacher-wrapper">
-      <img 
-        src="/assets/images/teacher.png" 
-        alt="SayBon Teacher" 
-        class="teacher-img"
-        id="teacherTap"
-      />
-      <div class="tap-text">Tap ✨</div>
-    </div>
+    <!-- LEFT -->
+    <section class="white-area">
+      <img src="assets/images/logo.png" class="logo" />
+    </section>
 
-  </div>
+    <!-- RIGHT -->
+    <section class="green-area">
 
-  <!-- RIGHT SIDE (GREEN) -->
-  <div class="home-right">
+      <!-- TEACHER -->
+      <div class="teacher-wrap" id="teacherCircle">
+        <div class="teacher-ring">
+          <img src="assets/images/teacher.png" />
+        </div>
+        <p class="tap-text">Tap 👆🏽</p>
+      </div>
 
-    <div class="logo-wrapper">
-      <img 
-        src="/assets/images/logo.png" 
-        alt="SayBon 3D Logo"
-        class="logo-3d"
-      />
-    </div>
+      <!-- ACTIONS -->
+      <div class="actions">
+        <button class="action-btn" id="startBtn">Get started</button>
+        <button class="action-btn" id="loginBtn">Log in</button>
+      </div>
 
-    <div class="cta-stack">
-      <button class="glass-btn primary" id="getStartedBtn">
-        Get Started
-      </button>
-
-      <button class="glass-btn secondary" id="loginBtn">
-        Log In
-      </button>
-    </div>
+    </section>
 
   </div>
 
-</div>
+  <!-- OVERLAY -->
+  <div id="offerOverlay" class="overlay hidden">
+    <h2>What we offer</h2>
 
-<script src="/js/home.js"></script>
+    <div class="pill-list">
+
+      <div class="pill">
+        <span>Speak French from your very first lesson.</span>
+      </div>
+
+      <div class="pill">
+        <span>Learn through music, games, and real conversation that actually sticks.</span>
+      </div>
+
+      <div class="pill">
+        <span>Built on the globally trusted CEFR framework for clear, credible progress.</span>
+      </div>
+
+      <div class="pill">
+        <span>Access expert DELF preparation and professional translation by highly qualified experts.</span>
+      </div>
+
+    </div>
+  </div>
+
+  <script src="js/home.js"></script>
+
 </body>
 </html>
