--- a/public/index.html
+++ b/public/index.html
@@ -2,75 +2,192 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>SayBon — Easy. Fun. French.</title>
 
-  <title>SayBon — Easy Fun French</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+    }
 
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/home.css" />
+    body {
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+    }
+
+    .home {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      width: 100vw;
+      height: 100vh;
+    }
+
+    /* ===== WHITE SIDE ===== */
+    .white-side {
+      background: #ffffff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+    }
+
+    .teacher-container {
+      width: 55%;
+      max-width: 600px;
+      text-align: center;
+      cursor: pointer;
+      transition: transform 0.3s ease;
+    }
+
+    .teacher-container:hover {
+      transform: scale(1.02);
+    }
+
+    .teacher-img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+
+    .tap-text {
+      margin-top: 10px;
+      font-size: 14px;
+      color: #666;
+    }
+
+    /* ===== GREEN SIDE ===== */
+    .green-side {
+      background: #1f4f5b; /* Matched to your reference green */
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 24px;
+      position: relative;
+    }
+
+    .logo-container {
+      width: 180px;
+      height: auto;
+      filter: drop-shadow(0px 8px 18px rgba(0,0,0,0.25));
+      transition: filter 0.3s ease;
+    }
+
+    .logo-container img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+
+    .logo-container:active {
+      animation: logoShimmer 0.6s ease;
+    }
+
+    @keyframes logoShimmer {
+      0% { filter: brightness(1); }
+      50% { filter: brightness(1.3); }
+      100% { filter: brightness(1); }
+    }
+
+    /* ===== GLASS BUTTONS ===== */
+    .buttons {
+      display: flex;
+      flex-direction: column;
+      gap: 14px;
+    }
+
+    .glass-btn {
+      padding: 14px 50px;
+      border-radius: 999px;
+      border: 1px solid rgba(255,255,255,0.4);
+      background: rgba(255,255,255,0.15);
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
+      color: white;
+      font-size: 16px;
+      font-weight: 600;
+      cursor: pointer;
+      box-shadow:
+        inset 0 1px 2px rgba(255,255,255,0.4),
+        0 6px 14px rgba(0,0,0,0.25);
+      transition: transform 0.1s ease, box-shadow 0.1s ease;
+    }
+
+    .glass-btn:active {
+      transform: translateY(1px);
+      box-shadow:
+        inset 0 1px 2px rgba(255,255,255,0.6),
+        0 3px 8px rgba(0,0,0,0.2);
+      animation: buttonShimmer 0.5s ease;
+    }
+
+    @keyframes buttonShimmer {
+      0% { filter: brightness(1); }
+      50% { filter: brightness(1.4); }
+      100% { filter: brightness(1); }
+    }
+
+    /* Responsive */
+    @media (max-width: 900px) {
+      .home {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+      }
+
+      .teacher-container {
+        width: 70%;
+      }
+
+      .logo-container {
+        width: 150px;
+      }
+    }
+  </style>
 </head>
 
 <body>
+  <div class="home">
 
-  <!-- AUDIO -->
-  <audio id="introAudio" preload="auto">
-    <source src="assets/sounds/intro-v2.mp3" type="audio/mpeg">
-  </audio>
+    <!-- WHITE SIDE (TEACHER) -->
+    <div class="white-side">
+      <div class="teacher-container" id="teacher">
+        <img
+          src="/assets/images/teacher.png"
+          alt="SayBon Teacher"
+          class="teacher-img"
+        />
+        <div class="tap-text">Tap ✨</div>
+      </div>
+    </div>
 
-  <div class="app">
+    <!-- GREEN SIDE (LOGO + BUTTONS) -->
+    <div class="green-side">
 
-    <!-- LEFT -->
-    <section class="white-area">
-      <img src="assets/images/logo.png" class="logo" />
-    </section>
-
-    <!-- RIGHT -->
-    <section class="green-area">
-
-      <!-- TEACHER -->
-      <div class="teacher-wrap" id="teacherCircle">
-        <div class="teacher-ring">
-          <img src="assets/images/teacher.png" />
-        </div>
-        <p class="tap-text">Tap 👆🏽</p>
+      <div class="logo-container">
+        <img
+          src="/assets/images/logo.png"
+          alt="SayBon Logo"
+        />
       </div>
 
-      <!-- ACTIONS -->
-      <div class="actions">
-        <button class="action-btn" id="startBtn">Get started</button>
-        <button class="action-btn" id="loginBtn">Log in</button>
-      </div>
-
-    </section>
-
-  </div>
-
-  <!-- OVERLAY -->
-  <div id="offerOverlay" class="overlay hidden">
-    <h2>What we offer</h2>
-
-    <div class="pill-list">
-
-      <div class="pill">
-        <span>Speak French from your very first lesson.</span>
-      </div>
-
-      <div class="pill">
-        <span>Learn through music, games, and real conversation that actually sticks.</span>
-      </div>
-
-      <div class="pill">
-        <span>Built on the globally trusted CEFR framework for clear, credible progress.</span>
-      </div>
-
-      <div class="pill">
-        <span>Access expert DELF preparation and professional translation by highly qualified experts.</span>
+      <div class="buttons">
+        <button class="glass-btn">Get Started</button>
+        <button class="glass-btn">Log In</button>
       </div>
 
     </div>
+
   </div>
 
-  <script src="js/home.js"></script>
-
+  <script>
+    // (Optional) Hook for your cinematic overlay later
+    document.getElementById("teacher").addEventListener("click", function() {
+      console.log("Teacher tapped — trigger cinematic overlay here");
+    });
+  </script>
 </body>
 </html>
