Fix homepage buttons, teacher ID mismatch, and overlay timing

--- a/public/index.html
+++ b/public/index.html
@@ -53,16 +53,22 @@
 
   </div>
 
-  <!-- OVERLAY -->
+  <!-- OVERLAY (WRAPPED FOR CARPET ROLL) -->
   <div id="offerOverlay" class="overlay hidden">
-    <h2>What we offer at SayBon</h2>
 
-    <div class="pill-list">
-      <div class="pill"><span>Speak French from your very first lesson</span></div>
-      <div class="pill"><span>Clear, fun CEFR-based learning</span></div>
-      <div class="pill"><span>Original music to help French stick naturally</span></div>
-      <div class="pill"><span>DELF prep + professional translation by experts</span></div>
+    <div class="overlay-content">  <!-- REQUIRED WRAPPER FOR CARPET EFFECT -->
+
+      <h2>What we offer at SayBon</h2>
+
+      <div class="pill-list">
+        <div class="pill"><span>Speak French from your very first lesson</span></div>
+        <div class="pill"><span>Clear, fun CEFR-based learning</span></div>
+        <div class="pill"><span>Original music to help French stick naturally</span></div>
+        <div class="pill"><span>DELF prep + professional translation by experts</span></div>
+      </div>
+
     </div>
+
   </div>
 
   <script src="js/home.js"></script>
