--- a/public/why.html
+++ b/public/why.html
@@ -7,6 +7,7 @@
   <title>Why Learn French — SayBon</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/why.css" />
 </head>
 
@@ -14,10 +15,12 @@
 
   <main class="why-page">
 
-    <h1 class="why-title">Why do you want to learn French?</h1>
-    <p class="why-subtitle">
-      Choose what resonates with you — there’s no wrong answer.
-    </p>
+    <div class="why-header">
+      <h1 class="why-title">Why do you want to learn French?</h1>
+      <p class="why-subtitle">
+        Tap what feels right — your journey starts here ✨
+      </p>
+    </div>
 
     <div class="why-grid">
 
@@ -62,7 +65,6 @@
     </div>
   </div>
 
-  <!-- SCRIPT -->
   <script src="js/why.js"></script>
 
 </body>
