Fix placement → reveal → login → loader → dashboard routing and repair intervention flow

--- a/public/loader.html
+++ b/public/loader.html
@@ -2,19 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Loading — SayBon</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SayBon — Loading</title>
 
-  <link rel="stylesheet" href="/css/global.css" />
-  <link rel="stylesheet" href="/loader/loader.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/loader.css" />
 </head>
 <body>
 
-  <div class="loader-screen">
+  <div class="loader-page">
+
     <div class="spinner"></div>
-    <p id="loaderTag"></p>
+
+    <p id="loaderText" class="loader-text"></p>
+
   </div>
 
-  <script src="/loader/loader.js"></script>
+  <script src="js/loader.js"></script>
+
 </body>
 </html>
