--- a/public/why.html
+++ b/public/why.html
@@ -4,61 +4,43 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Why SayBon?</title>
+  <title>Why learn French? — SayBon</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/why.css" />
+  <link rel="stylesheet" href="/css/why.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Patrick+Hand&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-  <main class="why-container" id="whyContainer">
+  <main class="why-container">
 
-    <header class="why-header">
-      <h1>Why do you want to learn French?</h1>
-      <p class="subtitle">Tap what feels right — your journey starts here ✨</p>
-    </header>
+    <h1 class="why-title">Why do you want to learn French?</h1>
 
-    <section class="options-grid">
+    <div class="options-grid" id="optionsGrid">
 
-      <div class="why-option travel" data-affirm="Better get your passport ready then… on y va 🌍✈️">
-        <h3>Travel & Culture</h3>
-        <p>Experience the world more deeply</p>
-      </div>
+      <button class="why-option travel" data-reason="travel">
+        Travel & Culture
+      </button>
 
-      <div class="why-option school" data-affirm="Academic glow-up loading… vous êtes prêt 🎓📚">
-        <h3>School & Exams</h3>
-        <p>Improve grades or prepare for tests</p>
-      </div>
+      <button class="why-option career" data-reason="career">
+        Career Growth
+      </button>
 
-      <div class="why-option work" data-affirm="Promotion energy activated… allons-y 💼✨">
-        <h3>Work & Career</h3>
-        <p>Boost your professional opportunities</p>
-      </div>
+      <button class="why-option school" data-reason="school">
+        School / Exams
+      </button>
 
-      <div class="why-option family" data-affirm="Love speaks many languages… merci le français 💛🤍">
-        <h3>Family & Friends</h3>
-        <p>Connect with loved ones in French</p>
-      </div>
+      <button class="why-option personal" data-reason="personal">
+        Personal Interest
+      </button>
 
-      <div class="why-option fun" data-affirm="Because joy + language = magic… c’est parti 🍦🎉">
-        <h3>Just for fun</h3>
-        <p>Because learning should feel joyful</p>
-      </div>
+    </div>
 
-      <div class="why-option other" data-affirm="Whatever your reasons may be, we’ve got you covered. 🌱🤍">
-        <h3>Other</h3>
-        <p>I have my own reason</p>
-      </div>
-
-    </section>
-
-    <!-- AFFIRMATION TAG (hidden initially) -->
-    <div id="affirmationTag" class="affirmation hidden"></div>
+    <!-- Affirmation appears here -->
+    <div id="affirmationBox" class="affirmation hidden"></div>
 
   </main>
 
-  <script src="js/why.js"></script>
-
+  <script src="/js/why.js"></script>
 </body>
 </html>
