Lock global loader routing and wire why → start → placement → reveal → login → dashboard flow

--- a/public/why.html
+++ b/public/why.html
@@ -36,7 +36,7 @@
 
     </div>
 
-    <!-- Affirmation appears here -->
+    <!-- Affirmation appears here (CENTERED) -->
     <div id="affirmationBox" class="affirmation hidden"></div>
 
   </main>
