--- a/public/loader.html
+++ b/public/loader.html
@@ -3,22 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>SayBon — Loading</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/loader.css" />
+  <!-- ✅ IMPORTANT: POINT TO THE REAL LOADER CSS -->
+  <link rel="stylesheet" href="/loader/loader.css" />
 </head>
+
 <body>
 
-  <div class="loader-page">
+  <div class="loader-container">
 
     <div class="spinner"></div>
 
-    <p id="loaderText" class="loader-text"></p>
+    <p id="loaderText" class="loader-text">
+      Loading SayBon...
+    </p>
 
   </div>
 
-  <script src="js/loader.js"></script>
+  <!-- ✅ IMPORTANT: POINT TO THE REAL LOADER JS -->
+  <script src="/loader/loader.js"></script>
 
 </body>
 </html>
+
