--- a/public/start.html
+++ b/public/start.html
@@ -3,57 +3,49 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Start your journey — SayBon</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/global.css" />
-  <link rel="stylesheet" href="css/start.css" />
+  <link rel="stylesheet" href="/css/start.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Patrick+Hand&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-<div class="start-app">
+  <main class="start-container">
 
-  <!-- floating accents -->
-  <div class="spark s1"></div>
-  <div class="spark s2"></div>
-  <div class="spark s3"></div>
+    <div class="header">
+      <span class="capsule">🌟 Start your journey</span>
+      <h1>How would you like to begin?</h1>
+      <p class="subtitle">Choose the path that fits you best.</p>
+    </div>
 
-  <div class="start-card">
+    <div class="paths">
 
-    <div class="badge">🚀 Start your journey</div>
+      <!-- LEFT PATH -->
+      <div class="path path-left" id="findLevel">
+        <div class="path-tag">🎯 Personalized path</div>
 
-    <h1 class="start-title">
-      How would you like to begin?
-    </h1>
+        <div class="path-card">
+          <h2>Find my level</h2>
+          <p>Take a quick smart test to meet your perfect match.</p>
+        </div>
+      </div>
 
-    <p class="start-sub">
-      Choose the path that fits you best.
-    </p>
+      <!-- RIGHT PATH -->
+      <div class="path path-right" id="startScratch">
+        <div class="path-tag">🌱 Beginner path</div>
 
-    <button class="path-btn test" id="placementBtn">
-      🎯 Find my level  
-      <span class="small">Take a quick smart test</span>
-    </button>
+        <div class="path-card">
+          <h2>Start from scratch</h2>
+          <p>Begin with Absolute Beginner — step by step.</p>
+        </div>
+      </div>
 
-    <button class="path-btn fresh" id="freshBtn">
-      🌱 Start from scratch  
-      <span class="small">Begin with Absolute Beginner</span>
-    </button>
+    </div>
 
-  </div>
-</div>
+  </main>
 
-<script>
-  document.getElementById("placementBtn").onclick = () => {
-    window.location.href = "/placement/";
-  };
-
-  document.getElementById("freshBtn").onclick = () => {
-    sessionStorage.setItem("saybon_next", "/dashboard/");
-    window.location.href = "/loader.html";
-  };
-</script>
-
+  <script src="/js/start.js"></script>
 </body>
 </html>
