Redesign start page with two-path layout and wire to loader

--- a/public/start.html
+++ b/public/start.html
@@ -17,14 +17,14 @@
     <div class="header">
       <span class="capsule">🌟 Start your journey</span>
       <h1>How would you like to begin?</h1>
-      <p class="subtitle">Choose the path that fits you best.</p>
+      <p class="subtitle"></p>
     </div>
 
     <div class="paths">
 
       <!-- LEFT PATH -->
       <div class="path path-left" id="findLevel">
-        <div class="path-tag">🎯 Personalized path</div>
+        <div class="path-tag"></div>
 
         <div class="path-card">
           <h2>Find my level</h2>
@@ -34,7 +34,7 @@
 
       <!-- RIGHT PATH -->
       <div class="path path-right" id="startScratch">
-        <div class="path-tag">🌱 Beginner path</div>
+        <div class="path-tag"></div>
 
         <div class="path-card">
           <h2>Start from scratch</h2>
