Refine placement intervention animation and routing

--- a/public/placement/index.html
+++ b/public/placement/index.html
@@ -16,11 +16,11 @@
 
 <div id="intervention" class="hidden">
 
-  <div class="teacher-box">
-    <div class="teacher-circle">
-      <img src="/assets/images/teacher.png" alt="Teacher"/>
-    </div>
+ <div class="teacher-box">
+  <div class="teacher-circle-mask">
+    <img src="/assets/images/teacher.png" class="teacher-img-emerge" />
   </div>
+</div>
 
   <audio
     id="interventionAudio"
