Enhance placement intervention with slow bounce, staggered glass buttons, and shimmer

--- a/public/placement/index.html
+++ b/public/placement/index.html
@@ -16,11 +16,12 @@
 
 <div id="intervention" class="hidden">
 
- <div class="teacher-box">
-  <div class="teacher-circle-mask">
-    <img src="/assets/images/teacher.png" class="teacher-img-emerge" />
+  <!-- INTERVENTION TEACHER (NEW IMAGE ONLY HERE) -->
+  <div class="teacher-box">
+    <div class="teacher-circle">
+      <img src="/assets/images/teacher-intervention.png" />
+    </div>
   </div>
-</div>
 
   <audio
     id="interventionAudio"
