--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -5,40 +5,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login — SayBon</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../css/global.css" />
-  <link rel="stylesheet" href="../css/login.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Patrick+Hand&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/css/login.css" />
 </head>
 <body>
 
-<div class="login-app">
+<main class="login-wrapper">
 
-  <div class="login-card">
+  <!-- FLOATING BADGE -->
+  <div class="capsule">Bienvenue 👋</div>
 
-    <div class="floating-emoji">✨</div>
+  <section class="login-card">
 
-    <h1 class="login-title">Bienvenue back</h1>
-    <p class="login-sub">
-      Sign in to continue your French journey.
-    </p>
-
-    <div class="quote">
-      “Every new language is a new life.” — <span>Une nouvelle vie</span>
+    <div class="brand">
+      <img src="/assets/images/logo.png" class="login-logo" />
+      <h1>Continue your French journey</h1>
+      <p class="subtext">One tap. No passwords. Pure magic.</p>
     </div>
 
     <button id="loginBtn" class="google-btn">
-      <span class="g">G</span>
-      Continue with Google
+      <span class="g-icon">G</span>
+      <span>Continue with Google</span>
     </button>
 
-    <p class="tiny">
-      By continuing, you agree to SayBon’s Terms & Privacy.
+    <p class="fine-print">
+      By continuing, you agree to SayBon’s <a href="#">Terms</a> and <a href="#">Privacy</a>.
     </p>
 
-  </div>
+  </section>
 
-</div>
+  <!-- DECORATIVE ELEMENTS (just vibes) -->
+  <div class="float-blob blob-1"></div>
+  <div class="float-blob blob-2"></div>
+  <div class="float-blob blob-3"></div>
 
-<script type="module" src="login.js"></script>
+</main>
+
+<script type="module" src="/auth/login.js"></script>
 </body>
 </html>
+
+
+
+
+
