--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -12,15 +12,11 @@
 
 <main class="login-wrapper">
 
-  <!-- FLOATING BADGE -->
-  <div class="capsule">Bienvenue 👋</div>
-
   <section class="login-card">
 
     <div class="brand">
       <img src="/assets/images/logo.png" class="login-logo" />
-      <h1>Continue your French journey</h1>
-      <p class="subtext">One tap. No passwords. Pure magic.</p>
+      <p class="journey-line">Let’s get back to progress 🏋🏽‍♀️</p>
     </div>
 
     <button id="loginBtn" class="google-btn">
@@ -34,7 +30,7 @@
 
   </section>
 
-  <!-- DECORATIVE ELEMENTS (just vibes) -->
+  <!-- DECORATIVE ELEMENTS (kept your vibe) -->
   <div class="float-blob blob-1"></div>
   <div class="float-blob blob-2"></div>
   <div class="float-blob blob-3"></div>
@@ -44,8 +40,3 @@
 <script type="module" src="/auth/login.js"></script>
 </body>
 </html>
-
-
-
-
-
