Redesign login page and ensure login routes via loader to dashboard

--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -16,7 +16,7 @@
 
     <div class="brand">
       <img src="/assets/images/logo.png" class="login-logo" />
-      <p class="journey-line">Let’s get back to progress 🏋🏽‍♀️</p>
+      <h2 class="journey-line">Let’s get back to progress 🏋🏽‍♀️</h2>
     </div>
 
     <button id="loginBtn" class="google-btn">
@@ -30,13 +30,25 @@
 
   </section>
 
-  <!-- DECORATIVE ELEMENTS (kept your vibe) -->
-  <div class="float-blob blob-1"></div>
-  <div class="float-blob blob-2"></div>
-  <div class="float-blob blob-3"></div>
-
 </main>
 
 <script type="module" src="/auth/login.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
