--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -5,50 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login — SayBon</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&family=Patrick+Hand&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/login.css" />
 </head>
 <body>
 
 <main class="login-wrapper">
 
-  <section class="login-card">
+  <div class="login-content">
 
-    <div class="brand">
-      <img src="/assets/images/logo.png" class="login-logo" />
-      <h2 class="journey-line">Let’s get back to progress 🏋🏽‍♀️</h2>
-    </div>
+    <!-- BIG CENTERED LOGO -->
+    <img src="/assets/images/logo.png" class="login-logo" />
 
+    <!-- TEXT BELOW LOGO -->
+    <h2 class="journey-line">Let’s get back to progress 🏋🏽‍♀️</h2>
+
+    <!-- PRIMARY LOGIN BUTTON -->
     <button id="loginBtn" class="google-btn">
       <span class="g-icon">G</span>
       <span>Continue with Google</span>
     </button>
 
-    <p class="fine-print">
-      By continuing, you agree to SayBon’s <a href="#">Terms</a> and <a href="#">Privacy</a>.
-    </p>
+    <!-- SMALLER BACK TO HOME BUTTON -->
+    <button id="backHomeBtn" class="home-btn">
+      Back to home
+    </button>
 
-  </section>
+  </div>
 
 </main>
 
 <script type="module" src="/auth/login.js"></script>
+
+<script>
+  document.getElementById("backHomeBtn").onclick = () => {
+    window.location.href = "/";
+  };
+</script>
+
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
