--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -15,19 +15,19 @@
   <!-- LEFT PANEL (TEXT + BUTTONS ONLY) -->
   <section class="login-left">
 
-    <div class="copy-block">
-      <h1 class="headline">Let’s get back to progress 🏋🏽‍♀️</h1>
-    </div>
+    <div class="content">
+      <h1>Let’s get back to Progress</h1>
 
-    <div class="buttons-block">
-      <button id="loginBtn" class="btn-primary">
-        <span class="g-icon">G</span>
-        <span>Continue with Google</span>
-      </button>
+      <div class="buttons">
+        <button id="loginBtn" class="btn-primary">
+          <span class="g-icon">G</span>
+          Continue with Google
+        </button>
 
-      <button id="backHomeBtn" class="btn-secondary">
-        Back to home
-      </button>
+        <button id="backHomeBtn" class="btn-secondary">
+          Back to home
+        </button>
+      </div>
     </div>
 
   </section>
