--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -1,78 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LEARNER 📌 DASHBOARD — SayBon</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>LEARNER 📌 DASHBOARD — SayBon</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../css/global.css" />
-  <link rel="stylesheet" href="../css/dashboard.css" />
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../css/global.css" />
+<link rel="stylesheet" href="../css/dashboard.css" />
 </head>
+
 <body>
 
 <div class="dashboard-app">
 
-  <header class="dash-header">
-    <h1 class="dash-title">LEARNER 📌 DASHBOARD</h1>
-    <p class="dash-sub">Your French journey at a glance</p>
-  </header>
+<header class="dash-header">
+<h1 class="dash-title">LEARNER 📌 DASHBOARD</h1>
+<p class="dash-sub">Your French journey at a glance</p>
+</header>
 
-  <main class="dash-grid">
+<main class="dash-grid">
 
-    <!-- LEVELS (only one that opens real route) -->
-    <button class="tile tile-levels" onclick="goLevels()">
-      <div class="tile-icon"></div>
-      <div class="tile-title">Levels 🎯</div>
-    </button>
+<button class="tile tile-levels" onclick="goLevels()">
+<img src="../assets/icons/levels.svg" class="tile-icon" />
+<div class="tile-title">Levels</div>
+<div class="tile-sub">A0 → C1</div>
+</button>
 
-    <!-- TALKLETICS GAMES -->
-    <button class="tile tile-games" onclick="goTalkletics()">
-      <div class="tile-icon"></div>
-      <div class="tile-title">Talkletics 🎮 Games</div>
-    </button>
+<button class="tile tile-games" onclick="goTalkletics()">
+<img src="../assets/icons/games.svg" class="tile-icon" />
+<div class="tile-title">Talkletics Games</div>
+<div class="tile-sub">20 skill games</div>
+</button>
 
-    <!-- SAYBON MUSIC -->
-    <button class="tile tile-music" onclick="goMusic()">
-      <div class="tile-icon"></div>
-      <div class="tile-title">SayBon 🎵 Music</div>
-    </button>
+<button class="tile tile-music" onclick="goMusic()">
+<img src="../assets/icons/music.svg" class="tile-icon" />
+<div class="tile-title">SayBon Music</div>
+<div class="tile-sub">8 playlists</div>
+</button>
 
-    <!-- DELF EXAMS -->
-    <button class="tile tile-delf" onclick="goDelf()">
-      <div class="tile-icon"></div>
-      <div class="tile-title">DELF 📝 PREPS</div>
-    </button>
+<button class="tile tile-delf" onclick="goDelf()">
+<img src="../assets/icons/delf.svg" class="tile-icon" />
+<div class="tile-title">DELF Prep</div>
+<div class="tile-sub">Mock exams</div>
+</button>
 
-    <!-- TRANSLATION SERVICES -->
-    <button class="tile tile-translate" onclick="goTranslation()">
-      <div class="tile-icon"></div>
-      <div class="tile-title">Translation 🌍 Services</div>
-    </button>
+<button class="tile tile-translate" onclick="goTranslation()">
+<img src="../assets/icons/translation.svg" class="tile-icon" />
+<div class="tile-title">Translation</div>
+<div class="tile-sub">Clients & Translators</div>
+</button>
 
-    <!-- CHAT ROOM -->
-    <button class="tile tile-chat" onclick="goChat()">
-      <div class="tile-icon"></div>
-      <div class="tile-title">Chat 💬 Room</div>
-    </button>
+<button class="tile tile-chat" onclick="goChat()">
+<img src="../assets/icons/chat.svg" class="tile-icon" />
+<div class="tile-title">Chat Room</div>
+<div class="tile-sub">Community space</div>
+</button>
 
-    <!-- FEEDBACK -->
-    <button class="tile tile-feedback" onclick="goFeedback()">
-      <div class="tile-icon"></div>
-      <div class="tile-title">Feedback ✍️ Enquiries</div>
-    </button>
+<button class="tile tile-feedback" onclick="goFeedback()">
+<img src="../assets/icons/feedback.svg" class="tile-icon" />
+<div class="tile-title">Feedback</div>
+<div class="tile-sub">We’re listening</div>
+</button>
 
-    <!-- SUPPORT -->
-    <button class="tile tile-support" onclick="goSupport()">
-      <div class="tile-icon"></div>
-      <div class="tile-title">Support 💚 SayBon</div>
-    </button>
+<button class="tile tile-support" onclick="goSupport()">
+<img src="../assets/icons/support.svg" class="tile-icon" />
+<div class="tile-title">Support 💚 SayBon</div>
+<div class="tile-sub">Invest • Donate • Partner</div>
+</button>
 
-  </main>
+</main>
 
-  <footer class="dash-footer">
-    <button class="home-mini" onclick="goHome()">← Back to Home</button>
-  </footer>
+<footer class="dash-footer">
+<button class="home-mini" onclick="goHome()">← Back to Home</button>
+</footer>
 
 </div>
 
